docs.kosli.com/content/legacy_ref/v0.1.38/kosli_list_environments.md
---
title: "kosli list environments"
---

# kosli list environments

## Synopsis

List environments.

```shell
kosli list environments [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -h, --help  |  help for environments  |
|    -o, --output string  |  [defaulted] The format of the output. Valid formats are: [table, json]. (default "table")  |


## Options inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout.  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


